--- a/MapsApp/MapsApp/Base.lproj/Main.storyboard
+++ b/MapsApp/MapsApp/Base.lproj/Main.storyboard
@@ -19,23 +19,38 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="a60-MR-Ir2">
                                 <rect key="frame" x="0.0" y="44" width="414" height="738"/>
                             </mapView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MkI-ic-Nqe">
+                                <rect key="frame" x="80" y="818" width="254" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="dP5-YL-bgO"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Standard"/>
+                                    <segment title="Satellite"/>
+                                    <segment title="Hybrid"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a60-MR-Ir2" secondAttribute="trailing" id="00n-wf-vSU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a60-MR-Ir2" secondAttribute="bottom" constant="80" id="8fn-8C-xhY"/>
-                            <constraint firstItem="a60-MR-Ir2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZSp-ro-JZI"/>
-                            <constraint firstItem="a60-MR-Ir2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wyv-vu-Z3x"/>
+                            <constraint firstItem="a60-MR-Ir2" firstAttribute="centerX" secondItem="MkI-ic-Nqe" secondAttribute="centerX" id="HF1-Tw-iKd"/>
+                            <constraint firstItem="MkI-ic-Nqe" firstAttribute="top" secondItem="a60-MR-Ir2" secondAttribute="bottom" constant="36" id="QUq-LW-FJp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MkI-ic-Nqe" secondAttribute="bottom" constant="14" id="W43-oL-OsB"/>
+                            <constraint firstItem="MkI-ic-Nqe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="80" id="i0l-0e-c9O"/>
+                            <constraint firstItem="a60-MR-Ir2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pRd-EE-kqa"/>
+                            <constraint firstItem="a60-MR-Ir2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pSf-Gj-HQo"/>
+                            <constraint firstItem="a60-MR-Ir2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="u6m-Mm-K6W"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="a60-MR-Ir2" id="3iG-iE-B6n"/>
+                        <outlet property="segmentedControl" destination="MkI-ic-Nqe" id="yMM-xF-Er2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="246" y="103"/>
+            <point key="canvasLocation" x="59" y="93"/>
         </scene>
     </scenes>
     <resources>
