--- a/MapsApp/MapsApp/Base.lproj/Main.storyboard
+++ b/MapsApp/MapsApp/Base.lproj/Main.storyboard
@@ -31,8 +31,8 @@
                                 </segments>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynd-Sd-k6R">
-                                <rect key="frame" x="184" y="785" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="166" y="785" width="82" height="30"/>
+                                <state key="normal" title="Pin Address"/>
                                 <connections>
                                     <action selector="didTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kUP-1b-cFF"/>
                                 </connections>
